Bug 476253 - Dynamically pick next polling time for IdleService (instead of polling every 5 sec). r=roc, sr=roc